test/fail/bad-heartbeat.mo
import Prim "mo:⛔";

actor {
  system func heartbeat() : () { // reject, should be async ()
  };
};

